<resources>
    <string name="app_name">Spike Recorder</string>
    <string name="action_privacy_policy">Privacy Policy</string>
    <string name="menu_item_scope">View/Record</string>
    <string name="menu_item_recordings">Recordings</string>
    <string name="action_setting">Settings</string>
    <string name="action_yes">Yes</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_play">Play</string>
    <string name="action_pause">Pause</string>
    <string name="action_close">Close</string>
    <string name="action_set">Set</string>
    <string name="label_show">Show</string>
    <string name="analysis_isi">Inter Spike Interval (ISI)</string>
    <string name="analysis_autocorrelation">Autocorrelation</string>
    <string name="analysis_cross_correlation">Cross Correlation</string>
    <string name="analysis_average_spike">Average Spike</string>
    <string name="analysis_event_triggered_averages">Event Triggered Averages</string>
    <string name="analysis_please_wait">Please wait…</string>
    <string name="title_share">Share file</string>
    <string name="title_delete">Delete file</string>
    <string name="title_convert">Convert file</string>
    <string name="title_error">Error</string>
    <string name="title_file_details">File Details</string>
    <string name="content_desc_back">Back to previous screen</string>
    <string name="content_desc_threshold_remove">Remove current</string>
    <string name="content_desc_threshold_select_one">Select threshold 1</string>
    <string name="content_desc_threshold_select_two">Select threshold 2</string>
    <string name="content_desc_threshold_select_three">Select threshold 3</string>
    <string name="content_desc_threshold_new">New threshold</string>
    <string name="content_desc_usb_connect">Connect to SpikerBox via USB</string>
    <string name="content_desc_usb_disconnect">Disconnect from SpikerBox</string>
    <string name="content_desc_sound_un_mute">Un-mute the sound</string>
    <string name="content_desc_sound_mute">Mute the sound</string>
    <string name="content_desc_am_modulation_filters">Apply filter</string>
    <string name="content_desc_clear_file_name">Clear file name</string>
    <string name="content_desc_settings_show">Show settings</string>
    <string name="content_desc_settings_hide">Hide settings</string>
    <string name="content_desc_event_triggered_averaging_select_event">Select events that should trigger averaging</string>
    <string name="content_desc_event_triggered_averaging_remove_noise">Remove noise intervals</string>
    <string name="content_desc_event_triggered_averaging_compute_confidence">Compute confidence intervals\nfor event</string>
    <string name="content_desc_conversion_progress">Conversion progress: %d%%\n\nDon\'t leave screen during conversion</string>
    <string name="template_beats_per_minute">%d BPM</string>
    <string name="template_rms">RMS: %.3f mV</string>
    <string name="template_spike_count">%1$d(%2$.1fHz)</string>
    <string name="template_channel_name">Channel %d</string>
    <string name="template_delete_file">"Delete %s "?"</string>
    <string name="template_convert_file">"Convert %s to WAV"?"</string>
    <string name="label_mute_speakers">Mute Speakers:</string>
    <string name="label_ecg">ECG</string>
    <string name="label_eeg">EEG</string>
    <string name="label_emg">EMG</string>
    <string name="label_plant">Plant</string>
    <string name="label_neuron">Neuron</string>
    <string name="label_human">Human</string>
    <string name="label_hhi">HHI</string>
    <string name="label_fft">FFT</string>
    <string name="label_custom_filter_cut_offs">Set band-pass filter cut-off frequency</string>
    <string name="label_custom_filter_low">Low</string>
    <string name="label_custom_filter_high">High</string>
    <string name="label_50Hz">50 Hz</string>
    <string name="label_60Hz">60 Hz</string>
    <string name="label_attenuate_frequency">Attenuate freq. (notch filter):</string>
    <string name="label_finding_spikes">Finding spikes…</string>
    <string name="label_filename">Filename</string>
    <string name="label_mime_type">Mime type</string>
    <string name="label_recorded_on">Recorded on</string>
    <string name="label_sampling_rate">Sampling rate</string>
    <string name="label_num_of_channels">Number of channels</string>
    <string name="label_bits_per_sample">Bits per sample</string>
    <string name="label_file_length">File length (s)</string>
    <string name="label_channel_abbr">Ch</string>
    <string name="template_connected_to_board">Connected to\n%s</string>
    <string name="board_type_plant">Plant SpikerBox</string>
    <string name="board_type_muscle">Muscle SpikerBox</string>
    <string name="board_type_heart">Heart and Brain SpikerBox</string>
    <string name="board_type_muscle_pro">Muscle SpikerBox Pro</string>
    <string name="board_type_neuron_pro">Neuron SpikerBox Pro</string>
    <string name="board_type_human_pro">Human SpikerBox Pro</string>
    <string name="board_type_hhi_box">Human-Human Interface Box</string>
    <string name="stimulation">Configure Stimulation</string>
    <string name="mic_thread_running">BYB Mic Thread is receiving audio.</string>
    <string name="tap_to_stop_recording">Tap to stop recording\n</string>
    <string name="read_speed_multiplier_label">Audio speed multiplier</string>
    <string-array name="speeds_array">
        <item>1</item>
        <item>2</item>
        <item>4</item>
        <item>8</item>
        <item>16</item>
    </string-array>
    <string name="read_speed_warning">Warning: changing this value to anything other than "1" could create instability and cause the program to behave unexpectedly. Once changing it, you will need to restart the Backyard Brains app for your changes to take effect.</string>
    <string name="configuration">Configuration</string>
    <string name="global_prefs">BackyardBrainsGlobalPreferences</string>
    <string name="microphone_read_speed">MicrophoneReadSpeed</string>
    <string name="filename">filename</string>
    <string name="file_date">file_date</string>
    <string name="filesize">filesize</string>
    <string name="recording_button_background_image">Recording Button Background Image</string>
    <string name="default_milliseconds">0 ms</string>
    <string name="no_files_found">No files found! Record some spikes!</string>
    <string name="start_recording_button">Start Recording Button</string>
    <string name="default_threshold_amount">1 x</string>
    <string name="close_view_button">Close</string>
    <string name="cd_threshold_handle">Threshold</string>
    <string name="average_num_slider">Num Samples Averaged</string>
    <string name="playhead_slider">Playhead</string>
    <string name="analysis_title">Analysis Name</string>
    <string name="find_spikes_not_done_title">Warning</string>
    <string name="find_spikes_not_done_message">You need to Find Spikes before performing any analysis.</string>
    <string name="analysis_wait_message">Please wait until analysis is finished.</string>
    <string name="move_button">select to move sideways</string>
    <string name="zoom_in_button_h">select to zoom in horizontally</string>
    <string name="zoom_out_button_h">select to zoom out horizontally</string>
    <string name="zoom_in_button_v">select to zoom in vertically</string>
    <string name="zoom_out_button_v">select to zoom out vertically</string>
    <string name="scaling_instructions">You can zoom in or zoom out by either clicking again the highlighted zoom button, click over the waveform for zooming that specific point or click and drag over the waveform to select the area to zoom.\nShould I show this message again?</string>
    <string name="label_n_times">%dx</string>
    <string name="rationale_record_audio">This app needs access to your microphone/sound input to be able to work.</string>
    <string name="rationale_read_external_storage">This app needs to have read access to be able to list existing recordings.</string>
    <string name="rationale_write_external_storage_record">This app needs to have write access to be able to store recordings.</string>
    <string name="rationale_write_external_storage_delete">This app needs to have write access to be able to delete recordings.</string>
    <string name="rationale_write_external_storage_import">This app needs to have write access to be able to import recordings.</string>
    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>
    <string name="title_settings_dialog">Permissions Required</string>
    <string name="settings_dialog_canceled">Settings dialog canceled</string>
    <string name="returned_from_app_settings_to_activity">Returned from app settings to MainActivity</string>
    <string-array name="options_averaging_trigger_type">
        <item>Signal</item>
        <item>Event 1</item>
        <item>Event 2</item>
        <item>Event 3</item>
        <item>Event 4</item>
        <item>Event 5</item>
        <item>Event 6</item>
        <item>Event 7</item>
        <item>Event 8</item>
        <item>Event 9</item>
        <item>Events</item>
    </string-array>
    <string-array name="options_recording">
        <item>File Details</item>
        <item>Play</item>
        <item>Analysis</item>
        <item>Share</item>
        <item>Delete</item>
        <item>Convert to WAV</item>
    </string-array>
    <string-array name="options_recording_analysis">
        <item>Event Triggered Averaging</item>
        <item>Find Spikes</item>
        <item>Autocorrelation</item>
        <item>ISI</item>
        <item>Cross Correlation</item>
        <item>Average Spike</item>
    </string-array>
    <string name="toast_import_successful">File successfully imported</string>
    <string name="notification_conversion_title">Converting %s to WAV</string>
    <string name="notification_conversion_text_start">Conversion in progress…</string>
    <string name="notification_conversion_text_progress">%d %% converted</string>
    <string name="notification_conversion_text_end_success">Conversion completed</string>
    <string name="notification_conversion_text_end_fail">Conversion failed</string>
    <string name="error_message_files_no_file">The requested file could not be found. Please try again.</string>
    <string name="error_message_files_exists">File with the specified name already exists. Please use a different name.</string>
    <string name="error_message_files_exists_2">File with the name %s already exists. Please rename the file before continuing.</string>
    <string name="error_message_files_delete">The requested file could not be deleted. Please try again.</string>
    <string name="error_message_files_events_delete">The associated file that holds saved events could not be deleted. Please use any file manager app to delete the associated file manually.</string>
    <string name="error_message_files_convert">The requested file could not be converted. Please try again.</string>
    <string name="error_message_files_convert_delete">The requested file could not be deleted after conversion. Please try to delete it manually.</string>
    <string name="error_message_files_rename">The requested file could not be renamed. Please try again.</string>
    <string name="error_message_files_events_rename">The associated file that holds saved events could not be renamed. Please use any file manager app to rename the associated file manually. The name should be the same as the recording (.wav) file but with "-events" suffix.</string>
    <string name="error_message_validation_file_name">File name cannot be empty. Please enter the file name.</string>
    <string name="error_message_import_error">An error occurred while trying to import a file. Please try again.</string>
</resources>