<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_filter_heart"
        android:layout_width="@dimen/min_button_tappable_h"
        android:layout_height="@dimen/min_button_tappable_h"
        android:background="@drawable/circle_gray_white"
        android:fontFamily="@font/comic_book"
        android:text="@string/label_ecg"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btn_filter_brain"
        android:layout_width="@dimen/min_button_tappable_h"
        android:layout_height="@dimen/min_button_tappable_h"
        android:layout_marginStart="@dimen/activity_vertical_margin_half"
        android:background="@drawable/circle_gray_white"
        android:fontFamily="@font/comic_book"
        android:text="@string/label_eeg"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_12"
        app:layout_constraintLeft_toRightOf="@+id/btn_filter_heart"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btn_filter_muscle"
        android:layout_width="@dimen/min_button_tappable_h"
        android:layout_height="@dimen/min_button_tappable_h"
        android:layout_marginStart="@dimen/activity_vertical_margin_half"
        android:background="@drawable/circle_gray_white"
        android:fontFamily="@font/comic_book"
        android:text="@string/label_emg"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_12"
        app:layout_constraintLeft_toRightOf="@+id/btn_filter_brain"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btn_filter_plant"
        android:layout_width="@dimen/min_button_tappable_h"
        android:layout_height="@dimen/min_button_tappable_h"
        android:layout_marginStart="@dimen/activity_vertical_margin_half"
        android:background="@drawable/circle_gray_white"
        android:fontFamily="@font/comic_book"
        android:text="@string/label_plant"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_10"
        app:layout_constraintLeft_toRightOf="@+id/btn_filter_muscle"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btn_filter_neuro"
        android:layout_width="@dimen/min_button_tappable_h"
        android:layout_height="@dimen/min_button_tappable_h"
        android:layout_marginStart="@dimen/activity_vertical_margin_half"
        android:background="@drawable/circle_gray_white"
        android:fontFamily="@font/comic_book"
        android:text="@string/label_neuron"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_8"
        app:layout_constraintLeft_toRightOf="@+id/btn_filter_plant"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_low_cut_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/et_low_cut_off"
        android:layout_marginTop="@dimen/activity_vertical_margin_half"
        android:text="@string/label_custom_filter_low"
        app:layout_constraintLeft_toLeftOf="@+id/et_low_cut_off"
        app:layout_constraintTop_toBottomOf="@+id/btn_filter_neuro"
        app:layout_constraintRight_toRightOf="@+id/et_low_cut_off"
        tools:text="Low"/>

    <EditText
        android:id="@+id/et_low_cut_off"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:digits="0123456789"
        android:imeOptions="actionDone"
        android:inputType="numberSigned"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_low_cut_off"
        tools:text="1"
        tools:ignore="Autofill"/>

    <TextView
        android:id="@+id/tv_cut_off_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_vertical_margin_half"
        android:layout_marginEnd="@dimen/activity_vertical_margin_half"
        android:gravity="center"
        android:text="@string/label_custom_filter_cut_offs"
        android:lines="2"
        app:layout_constraintLeft_toRightOf="@+id/et_low_cut_off"
        app:layout_constraintTop_toTopOf="@+id/et_low_cut_off"
        app:layout_constraintRight_toLeftOf="@+id/et_high_cut_off"
        app:layout_constraintBottom_toBottomOf="@+id/et_high_cut_off"/>

    <TextView
        android:id="@+id/tv_high_cut_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/et_high_cut_off"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/label_custom_filter_high"
        app:layout_constraintLeft_toLeftOf="@+id/et_high_cut_off"
        app:layout_constraintTop_toBottomOf="@+id/btn_filter_neuro"
        app:layout_constraintRight_toRightOf="@+id/et_high_cut_off"/>

    <EditText
        android:id="@+id/et_high_cut_off"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:gravity="center"
        android:imeOptions="actionDone"
        android:inputType="numberSigned"
        app:layout_constraintLeft_toRightOf="@+id/tv_cut_off_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_high_cut_off"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="22050"
        tools:ignore="Autofill"/>

    <com.example.roman.thesimplerangebar.SimpleRangeBar
        android:id="@+id/rb_cut_offs"
        android:layout_width="0dp"
        android:layout_height="@dimen/mid_button_tappable_h"
        android:layout_marginTop="@dimen/activity_vertical_margin_half"
        android:padding="@dimen/activity_horizontal_margin"
        app:roundCorners="true"
        app:thickness="3dp"
        app:radiusThumb="10dp"
        app:colorRangeBar="@color/gray_darker"
        app:colorRange="@color/orange"
        app:colorThumb="@color/orange"
        app:colorThumbPressed="@color/orange"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_low_cut_off"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tv_label_notch_filter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_attenuate_frequency"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cb_notch_filter_50hz"
        app:layout_constraintRight_toLeftOf="@+id/cb_notch_filter_50hz"
        app:layout_constraintBottom_toBottomOf="@+id/cb_notch_filter_50hz"/>

    <CheckBox
        android:id="@+id/cb_notch_filter_50hz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin_half"
        android:layout_marginTop="@dimen/activity_vertical_margin_half"
        android:button="@null"
        android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
        android:text="@string/label_50Hz"
        app:layout_constraintLeft_toRightOf="@+id/tv_label_notch_filter"
        app:layout_constraintTop_toBottomOf="@+id/rb_cut_offs"
        app:layout_constraintRight_toLeftOf="@+id/cb_notch_filter_60hz"/>

    <CheckBox
        android:id="@+id/cb_notch_filter_60hz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin_half"
        android:layout_marginTop="@dimen/activity_vertical_margin_half"
        android:button="@null"
        android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
        android:text="@string/label_60Hz"
        app:layout_constraintLeft_toRightOf="@+id/cb_notch_filter_50hz"
        app:layout_constraintTop_toBottomOf="@+id/rb_cut_offs"
        app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>