<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/ibtn_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/activity_vertical_margin_half"
        android:layout_marginStart="@dimen/activity_vertical_margin_half"
        android:layout_gravity="top|start"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:srcCompat="@drawable/ic_chevron_left_white_32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/content_desc_back"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="@dimen/min_button_tappable_h"
        android:layout_marginStart="@dimen/activity_horizontal_margin_half"
        android:layout_marginLeft="@dimen/activity_horizontal_margin_half"
        android:layout_marginTop="@dimen/activity_vertical_margin_half"
        android:layout_marginEnd="@dimen/activity_horizontal_margin_half"
        android:layout_marginRight="@dimen/activity_horizontal_margin_half"
        android:gravity="center_vertical"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/title_file_details"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_18"
        app:layout_constraintLeft_toRightOf="@+id/ibtn_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/mid_button_tappable_h"/>

    <TextView
        android:id="@+id/tv_filename_label"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/mid_button_tappable_h"
        android:layout_marginRight="@dimen/min_button_tappable_h"
        android:layout_marginEnd="@dimen/min_button_tappable_h"
        android:gravity="start|center_vertical"
        android:padding="10dp"
        android:textSize="@dimen/font_size_16"
        android:labelFor="@+id/et_filename"
        android:text="@string/label_filename"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h"
        app:layout_constraintRight_toLeftOf="@id/et_filename"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <ImageButton
        android:id="@+id/ibtn_clear_filename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        app:srcCompat="@drawable/ic_add_circle_white_16dp"
        app:layout_constraintLeft_toRightOf="@+id/et_filename"
        app:layout_constraintTop_toTopOf="@+id/et_filename"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/et_filename"
        android:contentDescription="@string/content_desc_clear_file_name"
        tools:ignore="RtlSymmetry"/>

    <TextView
        android:id="@+id/tv_filename"
        android:layout_width="0dp"
        android:layout_height="@dimen/mid_button_tappable_h"
        android:paddingLeft="10dp"
        android:paddingTop="17dp"
        android:paddingRight="10dp"
        android:paddingBottom="17dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="@dimen/font_size_16"
        app:layout_constraintLeft_toLeftOf="@id/et_filename"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h"
        app:layout_constraintRight_toRightOf="@id/et_filename"
        tools:text="BYB_Recording_2018-12-12_13_56_37"/>

    <EditText
        android:id="@+id/et_filename"
        android:layout_width="0dp"
        android:layout_height="@dimen/mid_button_tappable_h"
        android:padding="10dp"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@color/gray_lighter"
        android:textSize="@dimen/font_size_16"
        app:layout_constraintLeft_toRightOf="@id/tv_filename_label"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h"
        app:layout_constraintRight_toLeftOf="@+id/ibtn_clear_filename"
        tools:ignore="Autofill"
        tools:text="BYB_Recording_2018-12-12_13_56_37"/>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/white_12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_filename"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tv_recorded_on_label"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/mid_button_tappable_h"
        android:layout_marginRight="@dimen/min_button_tappable_h"
        android:layout_marginEnd="@dimen/min_button_tappable_h"
        android:gravity="start|center_vertical"
        android:padding="10dp"
        android:textSize="@dimen/font_size_16"
        android:labelFor="@+id/tv_recorded_on"
        android:text="@string/label_recorded_on"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_filename"
        app:layout_constraintRight_toLeftOf="@id/tv_recorded_on"/>

    <TextView
        android:id="@+id/tv_recorded_on"
        android:layout_width="0dp"
        android:layout_height="@dimen/mid_button_tappable_h"
        android:gravity="end|center_vertical"
        android:padding="10dp"
        android:textSize="@dimen/font_size_16"
        app:layout_constraintLeft_toRightOf="@id/tv_recorded_on_label"
        app:layout_constraintTop_toBottomOf="@+id/et_filename"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="1/16/2019, 1:09 PM"/>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/white_12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_recorded_on"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tv_sampling_rate_label"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/mid_button_tappable_h"
        android:layout_marginRight="@dimen/min_button_tappable_h"
        android:layout_marginEnd="@dimen/min_button_tappable_h"
        android:gravity="start|center_vertical"
        android:padding="10dp"
        android:textSize="@dimen/font_size_16"
        android:labelFor="@+id/tv_recorded_on"
        android:text="@string/label_sampling_rate"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_recorded_on"
        app:layout_constraintRight_toLeftOf="@id/tv_sampling_rate"/>

    <TextView
        android:id="@+id/tv_sampling_rate"
        android:layout_width="0dp"
        android:layout_height="@dimen/mid_button_tappable_h"
        android:gravity="end|center_vertical"
        android:padding="10dp"
        android:textSize="@dimen/font_size_16"
        app:layout_constraintLeft_toRightOf="@id/tv_sampling_rate_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_recorded_on"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="44100"/>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/white_12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sampling_rate"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tv_num_of_channels_label"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/mid_button_tappable_h"
        android:layout_marginRight="@dimen/min_button_tappable_h"
        android:layout_marginEnd="@dimen/min_button_tappable_h"
        android:gravity="start|center_vertical"
        android:padding="10dp"
        android:textSize="@dimen/font_size_16"
        android:labelFor="@+id/tv_recorded_on"
        android:text="@string/label_num_of_channels"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sampling_rate"
        app:layout_constraintRight_toLeftOf="@id/tv_num_of_channels"/>

    <TextView
        android:id="@+id/tv_num_of_channels"
        android:layout_width="0dp"
        android:layout_height="@dimen/mid_button_tappable_h"
        android:gravity="end|center_vertical"
        android:padding="10dp"
        android:textSize="@dimen/font_size_16"
        app:layout_constraintLeft_toRightOf="@id/tv_num_of_channels_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_sampling_rate"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="2"/>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/white_12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_num_of_channels"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tv_file_length_label"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/mid_button_tappable_h"
        android:layout_marginRight="@dimen/min_button_tappable_h"
        android:gravity="start|center_vertical"
        android:padding="10dp"
        android:textSize="@dimen/font_size_16"
        android:labelFor="@+id/tv_recorded_on"
        android:text="@string/label_file_length"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_num_of_channels"
        app:layout_constraintRight_toLeftOf="@id/tv_file_length"
        tools:layout_editor_absoluteY="280dp"/>

    <TextView
        android:id="@+id/tv_file_length"
        android:layout_width="0dp"
        android:layout_height="@dimen/mid_button_tappable_h"
        android:gravity="end|center_vertical"
        android:padding="10dp"
        android:textSize="@dimen/font_size_16"
        app:layout_constraintLeft_toRightOf="@id/tv_file_length_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_num_of_channels"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="8.468004"/>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/white_12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_file_length"
        app:layout_constraintRight_toRightOf="parent"/>
</android.support.constraint.ConstraintLayout>
